--- a/src/Components/HomePage/MainPage.css
+++ b/src/Components/HomePage/MainPage.css
@@ -3,4 +3,5 @@
     height: 100vh;
     background: url(https://ik.imagekit.io/amazon2020/amazon-image/amazon-image/WhatsApp%20Image%202024-11-27%20at%2011.52.25.jpeg);
     background-size: 100vw;
+    background-color: #eaeded;
 }
